# egui_l10n

./: Cargo.toml  README.md
src/: lib.rs  macro.rs
