[package]
name = "egui_l10n"
version = "0.6.1"
edition = "2024"

[dependencies]
eframe = { version = "0.34.3", default-features = false }
egui = { version = "0.34.3", default-features = false }
egui-phosphor = "0.12.0"
fluent = "0.17.0"
fluent_content = { git = "https://github.com/kgv/fluent_content" }
indexmap = "2.14.0"
tracing = "0.1.44"
unic-langid = { version = "0.9.6", features = ["macros"] }

# fluent_content = "0.0.5"

[features]
default = []
macros = ["unic-langid/macros"]
